Added README.md, CREDITS

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Carthage
 SAAOSX/SAA_Lemmatised.sqlite3
 SAAOSX/SAAO_CompleteGlossary.sqlite3
+SAAOSX/SAAOSX.xcodeproj/xcuserdata/Chaitanya.xcuserdatad/*
