Updated database interfaces

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 Carthage
 SAAOSX/SAA_Lemmatised.sqlite3
+SAAOSX/old_SAA_Lemmatised.sqlite3
 SAAOSX/SAAO_CompleteGlossary.sqlite3
 SAAOSX.xcodeproj/xcuserdata/Chaitanya.xcuserdatad/**
