- Added basic iOS interface - Added iOS embedded fonts, placeholder icon - Updated README and CREDITS

--- a/SAAiOS/Info.plist
+++ b/SAAiOS/Info.plist
@@ -44,6 +44,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>CuneiformNA.ttf</string>
+		<string>DejaVuSans.ttf</string>
+	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
