Working on notes implementation with sync

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ SAAOSX/old_SAA_Lemmatised.sqlite3
 SAAOSX/SAAO_CompleteGlossary.sqlite3
 SAAOSX.xcodeproj/xcuserdata/Chaitanya.xcuserdatad/**
 .idea/
+.swiftlint.yml
+GoogleService-Info.plist
