Moved to Cocoapods for dependencies. Added Firebase Auth and DB integration for synced notes

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ SAAOSX/SAAO_CompleteGlossary.sqlite3
 SAAOSX.xcodeproj/xcuserdata/Chaitanya.xcuserdatad/**
 .idea/
 .swiftlint.yml
+Pods/
 GoogleService-Info.plist
