--- a/SAAOSX.xcodeproj/xcshareddata/xcschemes/SAAi.xcscheme
+++ b/SAAOSX.xcodeproj/xcshareddata/xcschemes/SAAi.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "5498CAD7204EAF63004C774A"
-               BuildableName = "SAAi.app"
-               BlueprintName = "SAAi"
+               BuildableName = "Tups&#x30c;enna.app"
+               BlueprintName = "Tup&#x161;enna"
                ReferencedContainer = "container:SAAOSX.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -27,19 +27,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-      </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "5498CAD7204EAF63004C774A"
-            BuildableName = "SAAi.app"
-            BlueprintName = "SAAi"
+            BuildableName = "Tups&#x30c;enna.app"
+            BlueprintName = "Tup&#x161;enna"
             ReferencedContainer = "container:SAAOSX.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
+      <Testables>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -56,13 +54,11 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "5498CAD7204EAF63004C774A"
-            BuildableName = "SAAi.app"
-            BlueprintName = "SAAi"
+            BuildableName = "Tups&#x30c;enna.app"
+            BlueprintName = "Tup&#x161;enna"
             ReferencedContainer = "container:SAAOSX.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -75,8 +71,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "5498CAD7204EAF63004C774A"
-            BuildableName = "SAAi.app"
-            BlueprintName = "SAAi"
+            BuildableName = "Tups&#x30c;enna.app"
+            BlueprintName = "Tup&#x161;enna"
             ReferencedContainer = "container:SAAOSX.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
