--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.sqlite filter=lfs diff=lfs merge=lfs -text
 *.sqlite3 filter=lfs diff=lfs merge=lfs -text
+SAAOSX/Documentation/** linguist-documentation
